--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 </head>
 
 <body class="container">
-    <img src="/images/scooter2.svg" alt="" class="cashback__scooter">
-    <img src="/images/plus.svg" alt="" class="cashback__plus">
-    <img src="/images/ellipse2.svg" alt="" class="cashback__ellipse">
+    <img src="images/scooter2.svg" alt="" class="cashback__scooter">
+    <img src="images/plus.svg" alt="" class="cashback__plus">
+    <img src="images/ellipse2.svg" alt="" class="cashback__ellipse">
     <div class="pages">
         <section class="top">
 
-            <img src="/images/scooter1.svg" alt="" class="top__scooter">
-            <img src="/images/ellipse.png" alt="" class="top__ellipse">
+            <img src="images/scooter1.svg" alt="" class="top__scooter">
+            <img src="images/ellipse.png" alt="" class="top__ellipse">
 
             <div class="top__container">
                 <div class="top__price">
                     <div class="top__discount">499P</div><s>3420P</s>
                 </div>
-                <img src="/images/logo.png" alt="яндекс" class="logo">
+                <img src="images/logo.png" alt="яндекс" class="logo">
                 <h1 class="top__title">Вступайте в клуб Самокатов</h1>
                 <p class="top__text">Купите абонемент, чтобы стать частью клуба в новом сезоне–2024. 8 месяцев за</p>
                 <button class="button button_top">Стать частью клуба</button>
@@ -68,7 +68,7 @@
                     и слушали хор Attaque de Panique</p>
 
                 <div class="subscription__images-container">
-                    <img src="/images/icon1.svg" alt="pill" class="subscription__icon-mobile">
+                    <img src="images/icon1.svg" alt="pill" class="subscription__icon-mobile">
                     <div class="subscription__images-mobile">
 
                         <img src="/images/mobile01.png" alt="" class="subscription__img">
