--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
                 <h2 class="club__title">Вот что дает участие в клубе</h2>
                 <div class="club__cards">
                     <article class="club__card">
-                        <img src="/images/img1.svg" alt="" class="club__image">
+                        <img src="images/img1.svg" alt="" class="club__image">
                         <p class="club__text">0 ₽ за старт в каждой поездке</p>
                     </article>
                     <article class="club__card">
-                        <img src="/images/img2.svg" alt="" class="club__image">
+                        <img src="images/img2.svg" alt="" class="club__image">
                         <p class="club__text">Катаетесь с друзьями? Бронируйте до трёх самокатов с аккаунта с
                             абонементом — так у всех будет бесплатный старт</p>
                     </article>
                     <article class="club__card">
-                        <img src="/images/img3.svg" alt="" class="club__image">
+                        <img src="images/img3.svg" alt="" class="club__image">
                         <p class="club__text">Бесплатная пауза 15 минут в поездке — например, чтобы зайти за кофе
                             или передохнуть</p>
                     </article>
                     <article class="club__card">
-                        <img src="/images/img4.svg" alt="" class="club__image">
+                        <img src="images/img4.svg" alt="" class="club__image">
                         <p class="club__text">Если самокат недостаточно заряжен или с ним неудобно переходить дорогу,
                             замените по пути на другой — это бесплатно</p>
                     </article>
@@ -58,9 +58,9 @@
             </div>
         </section>
         <section class="subscription">
-            <img src="/images/icon1.svg" alt="" class="subscription__icon1">
-            <img src="/images/icon2.svg" alt="" class="subscription__icon2">
-            <img src="/images/icon3.svg" alt="" class="subscription__icon3">
+            <img src="images/icon1.svg" alt="" class="subscription__icon1">
+            <img src="images/icon2.svg" alt="" class="subscription__icon2">
+            <img src="images/icon3.svg" alt="" class="subscription__icon3">
             <div class="subscription__container">
                 <h2 class="subscription__title">Эксклюзивный доступ к событиям Самокатов</h2>
                 <p class="subscription__text">С абонементом — у вас доступ к специальным мероприятиям, скидки и классный
@@ -71,27 +71,27 @@
                     <img src="images/icon1.svg" alt="pill" class="subscription__icon-mobile">
                     <div class="subscription__images-mobile">
 
-                        <img src="/images/mobile01.png" alt="" class="subscription__img">
-                        <img src="/images/img02.png" alt="" class="subscription__img">
+                        <img src="images/mobile01.png" alt="" class="subscription__img">
+                        <img src="images/img02.png" alt="" class="subscription__img">
                     </div>
                     <div class="subscription__buttons">
                         <button class="button button_subscription" disabled>
-                            <img src="/images/left-arrow.svg" alt="arrow" class="subscription__button-image">
+                            <img src="images/left-arrow.svg" alt="arrow" class="subscription__button-image">
                         </button>
                         <button class="button button_subscription">
-                            <img src="/images/right-arrow.svg" alt="arrow" class="subscription__button-image">
+                            <img src="images/right-arrow.svg" alt="arrow" class="subscription__button-image">
                         </button>
                     </div>
 
                 </div>
                 <div class="subscription__images">
                     <div class="subscription__wrapper1">
-                        <img src="/images/img01.png" alt="" class="subscription__image">
-                        <img src="/images/img02.png" alt="" class="subscription__image">
+                        <img src="images/img01.png" alt="" class="subscription__image">
+                        <img src="images/img02.png" alt="" class="subscription__image">
                     </div>
                     <div class="subscription__wrapper2">
-                        <img src="/images/img03.png" alt="" class="subscription__image">
-                        <img src="/images/img04.png" alt="" class="subscription__image">
+                        <img src="images/img03.png" alt="" class="subscription__image">
+                        <img src="images/img04.png" alt="" class="subscription__image">
 
                     </div>
                 </div>
@@ -109,7 +109,7 @@
         <section class="join">
             <div class="join__container">
                 <div class="join__images">
-                    <img src="/images/scooterandwords.svg" alt="" class="join__scooter">
+                    <img src="images/scooterandwords.svg" alt="" class="join__scooter">
                 </div>
                 <div class="join__wrapper">
                     <h2 class="join__title">80 % наших пользователей уже в клубе и экономят на поездках</h2>
