Bug fix: readme and alt

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body class="container">
-    <img src="images/scooter2.svg" alt="" class="cashback__scooter">
-    <img src="images/plus.svg" alt="" class="cashback__plus">
-    <img src="images/ellipse2.svg" alt="" class="cashback__ellipse">
+    <img src="images/scooter2.svg" alt="скутер" class="cashback__scooter">
+    <img src="images/plus.svg" alt="плюс" class="cashback__plus">
+    <img src="images/ellipse2.svg" alt="эллипс" class="cashback__ellipse">
     <div class="pages">
         <section class="top">
 
-            <img src="images/scooter1.svg" alt="" class="top__scooter">
-            <img src="images/ellipse.png" alt="" class="top__ellipse">
+            <img src="images/scooter1.svg" alt="скутер" class="top__scooter">
+            <img src="images/ellipse.png" alt="эллипс" class="top__ellipse">
 
             <div class="top__container">
 
@@ -40,21 +40,21 @@
                 <h2 class="club__title">Вот что дает участие в клубе</h2>
                 <div class="club__cards">
                     <article class="club__card">
-                        <img src="images/img1.svg" alt="" class="club__image">
+                        <img src="images/img1.svg" alt="изображение" class="club__image">
                         <p class="club__text">0 ₽ за старт в каждой поездке</p>
                     </article>
                     <article class="club__card">
-                        <img src="images/img2.svg" alt="" class="club__image">
+                        <img src="images/img2.svg" alt="изображение" class="club__image">
                         <p class="club__text">Катаетесь с друзьями? Бронируйте до трёх самокатов с аккаунта с
                             абонементом — так у всех будет бесплатный старт</p>
                     </article>
                     <article class="club__card">
-                        <img src="images/img3.svg" alt="" class="club__image">
+                        <img src="images/img3.svg" alt="изображение" class="club__image">
                         <p class="club__text">Бесплатная пауза 15 минут в поездке — например, чтобы зайти за кофе
                             или передохнуть</p>
                     </article>
                     <article class="club__card">
-                        <img src="images/img4.svg" alt="" class="club__image">
+                        <img src="images/img4.svg" alt="изображение" class="club__image">
                         <p class="club__text">Если самокат недостаточно заряжен или с ним неудобно переходить дорогу,
                             замените по пути на другой — это бесплатно</p>
                     </article>
@@ -62,9 +62,9 @@
             </div>
         </section>
         <section class="subscription">
-            <img src="images/icon1.svg" alt="" class="subscription__icon1">
-            <img src="images/icon2.svg" alt="" class="subscription__icon2">
-            <img src="images/icon3.svg" alt="" class="subscription__icon3">
+            <img src="images/icon1.svg" alt="таблетки" class="subscription__icon1">
+            <img src="images/icon2.svg" alt="местоположение" class="subscription__icon2">
+            <img src="images/icon3.svg" alt="стакан" class="subscription__icon3">
             <div class="subscription__container">
                 <h2 class="subscription__title">Эксклюзивный доступ к событиям Самокатов</h2>
                 <p class="subscription__text">С абонементом — у вас доступ к специальным мероприятиям, скидки и классный
@@ -76,7 +76,7 @@
                     <div class="subscription__images-mobile">
                         <template class="subscription-template">
                             <article class="subscription__image-mobile">
-                                <img src="images/mobile01.png" alt="" class="subscription__img">
+                                <img src="images/mobile01.png" alt="люди" class="subscription__img">
                             </article>
                         </template>
 
@@ -93,12 +93,12 @@
 
                 <div class="subscription__images">
                     <div class="subscription__wrapper1">
-                        <img src="images/img01.png" alt="" class="subscription__image">
-                        <img src="images/img02.png" alt="" class="subscription__image">
+                        <img src="images/img01.png" alt="люди" class="subscription__image">
+                        <img src="images/img02.png" alt="люди" class="subscription__image">
                     </div>
                     <div class="subscription__wrapper2">
-                        <img src="images/img03.png" alt="" class="subscription__image">
-                        <img src="images/img04.png" alt="" class="subscription__image">
+                        <img src="images/img03.png" alt="люди" class="subscription__image">
+                        <img src="images/img04.png" alt="люди" class="subscription__image">
 
                     </div>
                 </div>
@@ -116,7 +116,7 @@
         <section class="join">
             <div class="join__container">
                 <div class="join__images">
-                    <img src="images/scooterwithwords.png" alt="" class="join__scooter">
+                    <img src="images/scooterwithwords.png" alt="скутер и слова" class="join__scooter">
                 </div>
                 <div class="join__wrapper">
                     <h2 class="join__title">80 % наших пользователей уже в клубе и экономят на поездках</h2>
@@ -132,11 +132,11 @@
                 <p class="footer__text">Доп. опция «Абонемент на самокаты» на 8 месяцев (240 дней) активируется
                     автоматически с момента старта сезона 2024 г. самокатов Яндекс Go, далее предусмотрено автопродление
                     доп.опции за 399 руб./мес. Сертификат на доп.опцию «Абонемент на самокаты» на 8 месяцев оформляется
-                    на условиях документа<a href="" class="footer__link"> yandex.ru/legal/scooters_seasonpass.</a>
+                    на условиях документа<a href="#" class="footer__link"> yandex.ru/legal/scooters_seasonpass.</a>
                     Доп.опция доступна пользователям с
-                    активной подпиской (условия подписки: <a href=""
+                    активной подпиской (условия подписки: <a href="#"
                         class="footer__link">yandex.ru/legal/yandex_plus_conditions)</a>, есть ограничения,
-                    подробнее: <a href="" class="footer__link">yandex.ru/legal/yandex_plus_opzii_list.</a> В случае
+                    подробнее: <a href="#" class="footer__link">yandex.ru/legal/yandex_plus_opzii_list.</a> В случае
                     отсутствия у пользователя активной
                     подписки на дату активации доп.опции, пользователю предоставляется 7 дней подписки Яндекс Плюс
                     бесплатно, далее автопродление — 299 руб./мес. Электросамокаты Яндекс Go — сервис аренды
